--- a/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
@@ -110,7 +110,9 @@ Because our domain repository extends `ReactiveSortingRepository`, it provides y
 ====
 [source,java]
 ----
-public class PersonRepositoryTests {
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration
+class PersonRepositoryTests {
 
     @Autowired ReactivePersonRepository repository;
 
@@ -162,7 +164,7 @@ The following example shows how to define a `near` query that finds all persons 
 ====
 [source,java]
 ----
-public interface PersonRepository extends ReactiveMongoRepository<Person, String> {
+interface PersonRepository extends ReactiveMongoRepository<Person, String> {
 
   // { 'location' : { '$near' : [point.x, point.y], '$maxDistance' : distance}}
   Flux<Person> findByLocationNear(Point location, Distance distance);
@@ -197,7 +199,7 @@ Spring Data MongoDB supports geo-near queries, as the following example shows:
 
 [source,java]
 ----
-public interface PersonRepository extends ReactiveMongoRepository<Person, String>  {
+interface PersonRepository extends ReactiveMongoRepository<Person, String>  {
 
   // {'geoNear' : 'location', 'near' : [x, y] }
   Flux<GeoResult<Person>> findByLocationNear(Point location);
@@ -253,7 +255,7 @@ You can use the generated `Predicate` class by using the `ReactiveQuerydslPredic
 ====
 [source,java]
 ----
-public interface ReactiveQuerydslPredicateExecutor<T> {
+interface ReactiveQuerydslPredicateExecutor<T> {
 
 	Mono<T> findOne(Predicate predicate);
 
@@ -278,7 +280,7 @@ To use this in your repository implementation, add it to the list of repository 
 ====
 [source,java]
 ----
-public interface PersonRepository extends ReactiveMongoRepository<Person, String>, ReactiveQuerydslPredicateExecutor<Person> {
+interface PersonRepository extends ReactiveMongoRepository<Person, String>, ReactiveQuerydslPredicateExecutor<Person> {
 
    // additional query methods go here
 }
