Update reactive transaction sample in reference documentation.
Closes: #4190

--- a/src/main/asciidoc/reference/client-session-transactions.adoc
+++ b/src/main/asciidoc/reference/client-session-transactions.adoc
@@ -302,10 +302,10 @@ The following example shows how to create and use transactions with a `ReactiveM
 [source,java]
 ----
 @Configuration
-static class Config extends AbstractMongoClientConfiguration {
+public class Config extends AbstractReactiveMongoConfiguration {
 
     @Bean
-    ReactiveMongoTransactionManager transactionManager(ReactiveDatabaseFactory factory) {  <1>
+    ReactiveMongoTransactionManager transactionManager(ReactiveMongoDatabaseFactory factory) {  <1>
         return new ReactiveMongoTransactionManager(factory);
     }
 
