--- a/src/main/asciidoc/reference/document-references.adoc
+++ b/src/main/asciidoc/reference/document-references.adoc
@@ -437,7 +437,7 @@ class Entity {
 // referenced object
 {
   "_id" : "9a48e32",
-  "firsntame" : "Josh",      <2>
+  "firstname" : "Josh",      <2>
   "lastname" : "Long",       <2>
 }
 ----
